[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/MonsterRangedSemiBoss.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://player/health/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/DamageSource.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 26.8911, 26.3986 )

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 0, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="Animation" id=4]

resource_name = "death"
length = 4.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, 720.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]

length = 16.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 6, 10, 14, 16 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -300 ), Vector2( 800, -300 ), Vector2( 800, 300 ), Vector2( 0, 300 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=6]

resource_name = "hurt"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.497451, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0.497451, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 30, 30 )

[node name="MonsterRangedSemiBoss" type="RigidBody2D" index="0"]

input_pickable = false
collision_layer = 2
collision_mask = 1
mode = 3
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
damage = 10
life = 100
speed = 0
timeReload = 3

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="Collision" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )
disabled = true

[node name="HealthBar" type="ProgressBar" parent="." index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -40.0
margin_top = -55.0
margin_right = 42.0
margin_bottom = -39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Material", "Percent", "Visibility", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Bullets" type="Node" parent="." index="3"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/death = SubResource( 4 )
anims/normal_move = SubResource( 5 )
blend_times = [  ]

[node name="AnimationPlayerHurt" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/hurt = SubResource( 6 )
blend_times = [  ]

[node name="Health" parent="." index="6" instance=ExtResource( 3 )]

max_health = 5

[node name="DamageSource" parent="." index="7" instance=ExtResource( 4 )]

editor/display_folded = true
_sections_unfolded = [ "Collision", "Visibility" ]
effect = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageSource" index="0"]

shape = SubResource( 7 )
disabled = true

[node name="RunTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 60.0
one_shot = true
autostart = false

[connection signal="body_shape_entered" from="." to="." method="_on_MonsterRanged_body_shape_entered"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="timeout" from="RunTimer" to="." method="_on_RunTimer_timeout"]


